Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: 5.4.0, 5.5.0, 5.7.0, 5.9.2, 5.11.2
-
Fix Version/s: 5.15.1
-
Component/s: GUI: Font handling
-
Labels:None
-
Environment:Plasma 5.11 on Arch Linux
-
Commits:c8bba05dc54231dbc5dc859f125d64b640e25a41 (qt/qtdeclarative/5.15), e807f9d1d80559b8ff91f1c3cfdd755b3da56a6d
Description
In some Qt 5 applications (e.g. Plasma and KSnapshot), the font kerning is incorrect. The third screenshot shows the same words (in the same font) rendered as expected. As you can see, the spacing between letters is consistent, while in screenshots 1 and 2, it is not. For example, note the placement of the t in 'History' in screenshot 1 compared to screenshot 3.
Attachments
Issue Links
- resulted in
-
QTBUG-84021 Pixel-align horizontal text alignment
-
- Open
-